# TechManagement

./: .env.example  .gitignore  README.md  batch_test_perfcheck.py  dump_test_results.py  extract_text.py  main.py  pyproject.toml  pyrightconfig.json  schema.json  test_logicon_core.py  test_mammoth_report.py  test_neo4j.py
data/evaluation/: 254Z7702G_20260328_121910.json
data/perfcheck_samples_2025_docx/: manifest.txt
data/任务书/: 5e.docx  5e88.docx
data/查重用例Word文档/: 相似组1-A.docx  相似组1-B.docx  相似组2-A.docx  相似组2-B.docx  相似组3-A.docx  相似组3-B.docx  相似组4-A.docx  相似组4-B.docx  相似组5-A.docx  相似组5-B.docx  相似组6-A.docx  相似组6-B.docx
data/申报书/: 5e.docx  (+1 more)
docs/: index.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: batch_logicons_from_dirs.py  batch_perfcheck_from_dirs.py  batch_perfcheck_remote_2025.py  build_corpus.py  build_formatted_report.py  build_mammoth_report.py  build_plagiarism_report.py  check_attachments.py  clean_corpus_index.py  corpus_safe.sh  evaluate_corpus.py  experiment_qysm_polar.py  experiment_qysm_soft_polar.py  experiment_qysm_tgt_verify.py  experiment_stamp_ab.py  explore_db.py  explore_key_tables.py  explore_project_db.py  extract_doc_content.py  manage_corpus.py  mirror_projects_by_guide_codes.py  neo4j_gds_preflight.py  prepare_project_year_norm.py  sandbox_briefing_step4.py  sandbox_graph_rag_step5.py  sandbox_hotspot_migration.py  sandbox_macro_insight_step3.py  sandbox_run_step3_step4.py  sandbox_run_step3_step4_step5.py  test.sh  test_perfcheck_logic.py  test_review.py
tests/: conftest.py
(+441 files in other folders)
